# MorphML

./: .gitignore  .ruff.toml  ADVANCED_EVOLUTIONARY_COMPLETE.md  ALIGNMENT_COMPLETION_REPORT.md  BAYESIAN_OPTIMIZATION_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DSL_COMPLETE.md  DSL_IMPLEMENTATION_COMPLETE.md  FINAL_SESSION_SUMMARY.md  GRADIENT_BASED_NAS_KICKOFF.md  LICENSE  MANIFEST.in  MULTI_OBJECTIVE_COMPLETE.md  PHASE1_100_PERCENT_COMPLETE.md  PHASE1_COMPLETE_STATUS.md  PHASE1_FINAL_REPORT.md  PHASE2_COMPLETION_STATUS.md  PHASE2_GAP_ANALYSIS.md  PHASE2_KICKOFF.md  PHASE3_COMPONENT1_COMPLETE.md  PHASE3_COMPONENT2_COMPLETE.md  PHASE3_COMPONENT3_COMPLETE.md  PHASE3_COMPONENT4_COMPLETE.md  PHASE3_COMPONENT5_COMPLETE.md  PHASE3_GAPS_FIXED.md  PHASE3_GAP_ANALYSIS.md  PHASE3_KICKOFF.md  PHASE3_SESSION_SUMMARY.md  PHASE4_COMPONENT1_COMPLETE.md  PHASE4_COMPONENT2_COMPLETE.md  PHASE4_COMPONENT4_COMPLETE.md  PHASE4_COMPONENTS_1-3-4_COMPLETE.md  PROGRESS.md  PROJECT_STATUS_COMPLETE.md  PUBLISHING_CHECKLIST.md  README.md  SECURITY.md  SESSION_SUMMARY.md  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  metrics_tracker.py  run_all_benchmarks.py  run_benchmarks.py
benchmarks/distributed/: benchmark_scaling.py  benchmark_schedulers.py  metrics_collector.py  validate_large_cluster.py
benchmarks/visualization/: plot_results.py
dashboard/: README.md
dashboard/backend/: app.py
dashboard/frontend/: package.json
deployment/: README.md
deployment/docker/: .dockerignore  Dockerfile.master  Dockerfile.worker
deployment/kubernetes/: configmap.yaml  large-cluster-values.yaml  master-deployment.yaml  namespace.yaml  secrets.yaml  worker-deployment.yaml
deployment/monitoring/: grafana-dashboard.json  prometheus-config.yaml  prometheus.yaml
deployment/scripts/: build.sh  deploy.sh
docs/: TESTING_AND_METRICS.md  api_reference.md  architecture.md  dsl_layer_reference.md  flows.md  index.md  info.md  mermaid.md  phase1_enhancements.md  research.md  user_guide.md
docs/deployment/: README.md  gke.md  kubernetes.md
examples/: __init__.py  advanced_features_example.py  bayesian_optimization_example.py  benchmark_suite_example.py  cifar10_example.py  demonstrate_successful_transfer.py  distributed_example.py  dsl_example.py  flatten_layer_example.py  nsga2_multiobjective_example.py  quickstart.py  simple_example.py  train_gnn_predictor.py  transfer_learning_example.py
examples/meta_learning/: __init__.py  performance_prediction_example.py  warm_starting_example.py
morphml/: __init__.py  config.py  exceptions.py  logging_config.py  version.py
morphml/api/: __init__.py  app.py  auth.py  client.py  models.py  rate_limit.py
morphml/benchmarking/: __init__.py  comparison.py
morphml/benchmarks/: __init__.py  comparator.py  datasets.py  metrics.py  openml_suite.py  problems.py  suite.py
morphml/cli/: __init__.py  main.py  quickstart.py
morphml/constraints/: __init__.py  handler.py  predicates.py
morphml/core/: __init__.py  crossover.py
morphml/distributed/: __init__.py  fault_tolerance.py  health_monitor.py  master.py  resource_manager.py  scheduler.py  worker.py
morphml/evaluation/: __init__.py  heuristic.py
morphml/execution/: __init__.py  local_executor.py
morphml/integrations/: __init__.py  jax_adapter.py  pytorch_adapter.py  sklearn_adapter.py  tensorflow_adapter.py
morphml/meta_learning/: __init__.py  architecture_similarity.py  experiment_database.py  transfer.py  warm_start.py
morphml/optimizers/: __init__.py  adaptive_operators.py  differential_evolution.py  genetic_algorithm.py  hill_climbing.py  nsga2.py  random_search.py  simulated_annealing.py
morphml/plugins/: __init__.py  custom_evaluator_example.py  custom_optimizer_example.py  plugin_system.py
morphml/reports/: __init__.py  generator.py
morphml/tracking/: __init__.py  experiment.py  logger.py  reporter.py
morphml/utils/: __init__.py  checkpoint.py  comparison.py  export.py  progress.py  validation.py
morphml/visualization/: __init__.py  analytics.py  architecture_diagrams.py  architecture_plot.py  convergence_plot.py  crossover_viz.py  graph_viz.py  pareto_plot.py  plotly_dashboards.py  population.py  progress.py
prompt/: INDEX.md  README.md
prompt/phase_1/: 00_overview.md  01_project_setup.md  02_dsl_implementation.md  03_graph_system.md  04_search_engine.md  05_genetic_algorithm.md  06_execution_cli.md
prompt/phase_2/: 00_overview.md  01_bayesian_optimization.md  02_gradient_based_nas.md  03_multi_objective.md  04_advanced_evolutionary.md  05_benchmarking_visualization.md
prompt/phase_3/: 00_overview.md  01_master_worker.md  02_task_scheduling.md  03_storage.md  04_fault_tolerance.md  05_kubernetes.md
prompt/phase_4/: 00_overview.md  01_warm_starting.md  02_performance_prediction.md  03_knowledge_base.md  04_strategy_evolution.md  05_transfer_learning.md
prompt/phase_5/: 00_overview.md  01_web_dashboard.md  02_framework_integrations.md  03_rest_api.md  04_visualization.md  05_plugins_docs.md
scripts/: compile_protos.py  compile_protos.sh  deploy_large_cluster.sh  run_all_tests.py  setup_dev.sh  verify_grpc_setup.py  verify_phase4_complete.py
tests/: __init__.py  run_local_tests.py  run_phase1_complete.py  run_phase1_syntax.py  test_all_optimizers.py  test_benchmarks.py  test_cli.py  test_constraints.py  test_crossover.py  test_dsl.py  test_dsl_basic.py  test_evaluation.py  test_genetic_algorithm.py  test_gnn_predictor.py  test_graph.py  test_helm_validation.py  test_installation.py  test_integration.py  test_performance.py  test_phase1_complete.py  test_phase1_comprehensive.py  test_phase1_syntax.py  test_population.py  test_tracking.py  test_transfer_learning.py  test_utils.py
tests/test_bayesian/: __init__.py  test_acquisition.py  test_gaussian_process.py  test_tpe_smac.py
tests/test_benchmarking/: test_comparison.py  test_datasets.py  test_metrics.py
tests/test_distributed/: __init__.py  test_fault_tolerance.py  (+7 more)
(+96 files in other folders)
