[tool.poetry]
name = "morphml"
version = "0.1.0"
description = "Production-grade Neural Architecture Search framework with distributed optimization and meta-learning"
authors = [
    "Vedanth <vedanth@vedanthq.com>",
    "Eshan Roy <eshanized@proton.me>"
]
maintainers = [
    "Vedanth <vedanth@vedanthq.com>",
    "Eshan Roy <eshanized@proton.me>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TIVerse/MorphML"
repository = "https://github.com/TIVerse/MorphML"
documentation = "https://morphml.readthedocs.io"
keywords = [
    "neural-architecture-search",
    "automl",
    "deep-learning",
    "optimization",
    "nas",
    "genetic-algorithm",
    "bayesian-optimization",
    "multi-objective",
    "distributed-computing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "morphml" }
]
include = [
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
]
exclude = [
    "tests",
    "docs",
    "examples",
    "*.pyc",
    "__pycache__",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
scipy = "^1.10.0"
networkx = "^3.1"
pydantic = "^2.0.0"
click = "^8.1.0"
rich = "^13.4.0"
pyyaml = "^6.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
# Phase 2: Bayesian Optimization
scikit-optimize = "^0.9.0"
gpytorch = { version = "^1.11", optional = true }
botorch = { version = "^0.9.0", optional = true }
# Phase 2: Gradient-Based NAS
torch = { version = "^2.0.0", optional = true }
# Phase 2: Multi-Objective
pymoo = "^0.6.0"
# Phase 2: Benchmarking
openml = "^0.14.0"
scikit-learn = "^1.3.0"
plotly = "^5.14.0"
# Phase 2: Advanced Evolutionary
cma = { version = "^3.3.0", optional = true }
# Phase 3: Distributed Execution
grpcio = { version = "^1.54.0", optional = true }
grpcio-tools = { version = "^1.54.0", optional = true }
protobuf = { version = "^4.23.0", optional = true }
pyzmq = { version = "^25.0.0", optional = true }
psutil = "^5.9.0"
# Phase 3: Kubernetes Management
kubernetes = { version = "^28.1.0", optional = true }
# Phase 3: Distributed Storage
sqlalchemy = { version = "^2.0.0", optional = true }
psycopg2-binary = { version = "^2.9.0", optional = true }
redis = { version = "^4.5.0", optional = true }
boto3 = { version = "^1.26.0", optional = true }
# Phase 5: REST API
fastapi = { version = "^0.100.0", optional = true }
uvicorn = { version = "^0.23.0", optional = true }
websockets = { version = "^11.0", optional = true }
# Phase 5: Authentication
python-jose = { version = "^3.3.0", optional = true }
passlib = { version = "^1.7.4", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
ruff = "^0.0.270"
mypy = "^1.3.0"
pre-commit = "^3.3.0"
ipython = "^8.14.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
morphml = "morphml.cli.main:cli"

[tool.poetry.extras]
bayesian = ["gpytorch", "botorch"]
gradient = ["torch"]
advanced = ["cma"]
distributed = ["grpcio", "grpcio-tools", "protobuf", "kubernetes"]
messaging = ["pyzmq"]
storage = ["sqlalchemy", "psycopg2-binary", "redis", "boto3"]
gpu = ["torch", "gpytorch", "botorch"]
api = ["fastapi", "uvicorn", "websockets"]
dashboard = ["fastapi", "uvicorn", "websockets", "python-jose", "passlib"]
all = ["gpytorch", "botorch", "torch", "cma", "grpcio", "grpcio-tools", "protobuf", "pyzmq", "sqlalchemy", "psycopg2-binary", "redis", "boto3", "kubernetes", "fastapi", "uvicorn", "websockets", "python-jose", "passlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "skopt.*",
    "gpytorch.*",
    "botorch.*",
    "torch.*",
    "pymoo.*",
    "openml.*",
    "sklearn.*",
    "plotly.*",
    "cma.*",
    "grpc.*",
    "google.protobuf.*",
    "psutil.*",
    "pynvml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=morphml --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["morphml"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
